<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    tools:showIn="@layout/fragment_me">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/user_share"
            android:text="@string/my_share"
            style="@style/MeTextStyle"/>

        <View
            style="@style/MeDividerStyle">
        </View>

        <Button
            android:id="@+id/user_questions"
            style="@style/MeTextStyle"
            android:text="@string/my_questions"/>

        <View
            style="@style/MeDividerStyle">
        </View>

        <Button
            android:id="@+id/user_answers"
            style="@style/MeTextStyle"
            android:text="@string/my_answers"/>

    </LinearLayout>
</android.support.v7.widget.CardView>